--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Kewo\\wechat\\": "src/"
+            "Kewo\\Wechat\\": "src/"
         },
         "files": ["src/wechat.php"]
     }
